Did some changes from line 388 to 391

--- a/my_django_app/guest/Templates/Guest/guest.html
+++ b/my_django_app/guest/Templates/Guest/guest.html
@@ -385,11 +385,10 @@
                 <div class="form-group">
                     <label for="exampleSelect2">Categories </label>
                     <select multiple="" class="form-control" id="exampleSelect2" name="options">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        <option>Cheque Deposit</option>
+                        <option>Cash Transaction</option>
+                        <option>Customer Service</option>
+                        <option>Debit and Credit Cards</option>
                     </select>
                 </div>
 
