--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <head>
     <base href="../../../">
     <meta charset="utf-8" />
-    <title>Queue Manager</title>
+    <title>Queue Setup</title>
     <meta name="description" content="Wizard examples" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
