--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <head>
 	<base href="../../../">
 	<meta charset="utf-8" />
-	<title>Queue Management Page</title>
+	<title>Queue Management</title>
 	<meta name="description" content="Contacts datatable listing" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -175,6 +175,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												class="menu-text">Apps</span><i class="menu-arrow"></i></a>
 
 									</li>
+									
 								</ul>
 								<!--end::Header Nav-->
 							</div>
@@ -195,7 +196,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<span
 										class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
 									<span
-										class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">Sean</span>
+										class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{director.user}}</span>
 									<span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
 										<span class="symbol-label font-size-h5 font-weight-bold">S</span>
 									</span>
@@ -264,6 +265,10 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 							</div>
 							<!--end::Card-->
+							<a href="queueSetup">
+								<button style="float: right;" type="button" class="btn btn-primary">Create new queue</button>
+							</a>
+
 
 							<!--begin::Modal-->
 							<div class="modal fade" id="kt_datatable_records_fetch_modal" tabindex="-1" role="dialog"
