Prevented the edit button on the queueManagement page from opening a new tab when clicked, and added the queue id to the end of the url.

--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -239,7 +239,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<td>{{element.CreatedAt}}</td>
 												<td>{{element.Active}}</td>
 												<td>
-													<a href="/edit" target="_blank">
+													<a href="/edit/{{element.id}}">
 														<span class="svg-icon svg-icon-primary svg-icon-2x">
 															<svg
 																xmlns="http://www.w3.org/2000/svg"
