--- a/my_django_app/guest/Templates/Guest/guest_beta.html
+++ b/my_django_app/guest/Templates/Guest/guest_beta.html
@@ -55,18 +55,21 @@
         <div class="col-md-4">
             <h1> Director {{ director.id }} </h1>
             <ul>
-                <li> {{director.FirstName}} </li>
-                <li> {{director.LastName}} </li>
-                <li> {{director.EmailAddress}} </li>
+                <li> {{director.first_name}} </li>
+                <li> {{director.last_name}} </li>
+                <li> {{director.email}} </li>
             </ul>
         </div>
         <div class="col-md-4">
-            <h1> Queue {{ queue.id }} </h1>
-            <ul>
-                <li> {{queue.Name}} </li>
-                <li> {{queue.queue_uuid}} </li>
-                <li> {{queue.CreatedAt}} </li>
-            </ul>
+            {% for queue in queues %}
+            
+                <h2> Queue {{ queue.id }} </h2>
+                <ul>
+                    <li> {{queue.Name}} </li>
+                    <li> {{queue.CreatedAt}} </li>
+                </ul>
+            {% endfor %}
+            
         </div>
     </div>
     <!--begin::Wrapper-->
@@ -86,9 +89,10 @@
                             <!--begin::Input-->
                             <div class="form-group">
                                 <label class="font-size-h6 font-weight-bolder text-dark">Phone</label>
-                                <input type="text"
+                                {% comment %} <input type="text"
                                     class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"
-                                    name="phonenumber" placeholder="Phone" value="" />
+                                    name="phonenumber" placeholder="Phone" value="" /> {% endcomment %}
+                                {{ form.phoneNumber }}
                             </div>
                             <!--end::Input-->
                         </div>
@@ -96,12 +100,13 @@
                             <!--begin::Input-->
                             <div class="form-group">
                                 <label class="font-size-h6 font-weight-bolder text-dark">Categories</label>
-                                <select class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6" id="exampleSelect1">
+                                {% comment %} <select class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6" id="exampleSelect1">
                                     <option>Choose a category</option>
                                     {% for category in categories %}
                                         <option> {{category.Name}} </option>
                                     {% endfor %}
-                                </select>
+                                </select> {% endcomment %}
+                                {{ form.categories_list }}
                             </div>
                             <!--end::Input-->
                         </div>
