--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -33,6 +33,11 @@ License: You must have a valid license purchased only from themeforest(the above
 	<link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
 	<link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
 	<link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<!--end::Global Theme Styles-->
 
 	<!--begin::Layout Themes(used by all pages)-->
@@ -218,12 +223,106 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="d-flex flex-column-fluid">
 						<!--begin::Container-->
 						<div class=" container ">
+							<ul class="nav nav-tabs" id="myTab">
+								<li class="nav-item">
+									<a href="#profile" class="nav-link" data-toggle="tab">Queue Management Table</a>
+								</li>
+								<li class="nav-item">
+									<a href="#messages" class="nav-link" data-toggle="tab">Queue Operators Management Table</a>
+								</li>
+							</ul>
 							<!--begin::Card-->
 							<div class="card card-custom gutter-b">
 								<div class="card-body">
+									<div class="tab-content">
+										<div class="tab-pane fade" id="profile">
+											<table id="example1" class="display" style="width:100%">
+												<thead>
+													<tr>
+														<th>Name1</th>
+														<th>CreatedAt1</th>
+														<th>Active1</th>
+														<th>Queue Settings1</th>
+													</tr>
+												</thead>
+												<tbody>
+													{% for element in data%}
+													<tr>
+														<td>{{element.Name}}</td>
+														<td>{{element.CreatedAt}}</td>
+														<td>{{element.Active}}</td>
+														<td>
+															<a href="/edit/{{element.id}}">
+																<span class="svg-icon svg-icon-primary svg-icon-2x">
+																	<svg
+																		xmlns="http://www.w3.org/2000/svg"
+																		xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
+																		height="24px" viewBox="0 0 24 24" version="1.1">
+																		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																			<rect x="0" y="0" width="24" height="24" />
+																			<path
+																				d="M5,8.6862915 L5,5 L8.6862915,5 L11.5857864,2.10050506 L14.4852814,5 L19,5 L19,9.51471863 L21.4852814,12 L19,14.4852814 L19,19 L14.4852814,19 L11.5857864,21.8994949 L8.6862915,19 L5,19 L5,15.3137085 L1.6862915,12 L5,8.6862915 Z M12,15 C13.6568542,15 15,13.6568542 15,12 C15,10.3431458 13.6568542,9 12,9 C10.3431458,9 9,10.3431458 9,12 C9,13.6568542 10.3431458,15 12,15 Z"
+																				fill="#000000" />
+																		</g>
+																	</svg>
+																</span>
+															</a>
+														</td>
+													</tr>
+													{% endfor %}
+												</tbody>
+											</table>
+											<a href="queueSetup">
+												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
+											</a>
+										</div>
+
+										<div class="tab-pane fade" id="messages">
+											<table id="example2" class="display" style="width:100%">
+												<thead>
+													<tr>
+														<th>Name2</th>
+														<th>CreatedAt2</th>
+														<th>Active2</th>
+														<th>Queue Settings2</th>
+													</tr>
+												</thead>
+												<tbody>
+													{% for element in data%}
+													<tr>
+														<td>{{element.Name}}</td>
+														<td>{{element.CreatedAt}}</td>
+														<td>{{element.Active}}</td>
+														<td>
+															<a href="/edit/{{element.id}}">
+																<span class="svg-icon svg-icon-primary svg-icon-2x">
+																	<svg
+																		xmlns="http://www.w3.org/2000/svg"
+																		xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
+																		height="24px" viewBox="0 0 24 24" version="1.1">
+																		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																			<rect x="0" y="0" width="24" height="24" />
+																			<path
+																				d="M5,8.6862915 L5,5 L8.6862915,5 L11.5857864,2.10050506 L14.4852814,5 L19,5 L19,9.51471863 L21.4852814,12 L19,14.4852814 L19,19 L14.4852814,19 L11.5857864,21.8994949 L8.6862915,19 L5,19 L5,15.3137085 L1.6862915,12 L5,8.6862915 Z M12,15 C13.6568542,15 15,13.6568542 15,12 C15,10.3431458 13.6568542,9 12,9 C10.3431458,9 9,10.3431458 9,12 C9,13.6568542 10.3431458,15 12,15 Z"
+																				fill="#000000" />
+																		</g>
+																	</svg>
+																</span>
+															</a>
+														</td>
+													</tr>
+													{% endfor %}
+												</tbody>
+											</table>
+											<a href="queueSetup">
+												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queue operators</button>
+											</a>
+											
+										</div>
+									</div>
 									<!--begin: Datatable-->
 									<!-- <div class="datatable datatable-bordered datatable-head-custom" id="kt_datatable"> -->
-									<table id="table" class="display" style="width:100%">
+									<!-- <table id="table" class="display" style="width:100%">
 										<thead>
 											<tr>
 												<th>Name</th>
@@ -252,22 +351,21 @@ License: You must have a valid license purchased only from themeforest(the above
 																		fill="#000000" />
 																</g>
 															</svg>
-															<!--end::Svg Icon-->
 														</span>
 													</a>
 												</td>
 											</tr>
 											{% endfor %}
 										</tbody>
-									</table>
+									</table> -->
 									<!-- </div> -->
 									<!--end: Datatable-->
 								</div>
 							</div>
 							<!--end::Card-->
-							<a href="queueSetup">
+							<!-- <a href="queueSetup">
 								<button style="float: right;" type="button" class="btn btn-primary">Create new queue</button>
-							</a>
+							</a> -->
 
 
 							<!--begin::Modal-->
@@ -413,11 +511,21 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<!--begin::Page Scripts(used by this page)-->
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
-	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 	<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 	<script>
+			$(document).ready(function(){ 
+		$("#myTab li:eq(0) a").tab('show'); // show 2nd tab on page load
+		});
+	</script>
+	<script>
 		$(document).ready(function () {
-			$('#table').DataTable();
+			$('#example1').DataTable();
+
+		});
+
+        $(document).ready(function () {
+			$('#example2').DataTable();
 
 		});
 	</script>
