--- a/my_django_app/customer/Templates/Customer/signup.html
+++ b/my_django_app/customer/Templates/Customer/signup.html
@@ -66,13 +66,13 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--begin::Aside-->
     <div class="login-aside d-flex flex-column flex-row-auto">
         <!--begin::Aside Top-->
-        <div class="d-flex flex-column-auto flex-column pt-15 px-30">
-            <!--begin::Aside header-->
-            <a href="#" class="login-logo py-6">
-            <!-- TODO #1: Change Logo -->
-				<!-- <img src="CMPS253/Template/assets/media/logos/logo-1.png" class="max-h-70px" alt=""/> -->
-			</a>
-            <!--end::Aside header-->
+        <div class="d-flex flex-column-fluid flex-column justify-content-between py-9 px-7 py-lg-13 px-lg-35">
+            <!--begin::Logo-->
+            <a href="#" class="text-center pt-2">
+                <img src= "{%static 'customer/Q_Green.png'%}" class="max-h-125px" alt=""/>
+            </a>
+            <!--end::Logo-->
+    
 
             <!--begin: Wizard Nav-->
             <div class="wizard-nav pt-5 pt-lg-30">
@@ -143,7 +143,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
         <!--begin::Aside Bottom-->
         <div class="aside-img-wizard d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center pt-2 pt-lg-5"
-            style="background-position-y: calc(100% + 3rem); background-image: url(assets/media/svg/illustrations/features.svg)">
+            style="background-position-y: calc(100% + 3rem); background-image: url({%static 'customer/Q_BackG2.png' %})">
         </div>
         <!--end::Aside Bottom-->
     </div>
