Changed a small style component

--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -24,6 +24,12 @@
     <link rel="stylesheet" href="{%static 'guest/light1.css'%}">
     <!--end::Layout Themes-->
 
+    <style>
+                .ml-1 
+        {
+            margin-left:(spacer * .25) !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -68,10 +74,7 @@
     <script>var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";</script>
     <!--begin::Global Config(global config for global JS scripts)-->
     <script>
-        .ml-1 
-        {
-            margin-left: ($spacer * .25) !important;
-        }
+
         var KTAppSettings = {
             "breakpoints": {
                 "sm": 576,
