--- a/my_django_app/customer/Templates/Customer/edit.html
+++ b/my_django_app/customer/Templates/Customer/edit.html
@@ -177,20 +177,17 @@
                                         </div>
  
                                     </div>
-
-
-
                                     
                                     <!-- <div class="pb-lg-0 pb-5">
                                         <button type="submit" id="kt_login_singin_form_submit_button"
                                             class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3">SignIn</button>
                                     </div> -->
                                     <div class="card-footer" style="float: right;">
-                                        <button type="submit" class="btn btn-primary mr-2">Submit</button>
+                                        <button type="submit" class="btn btn-primary mr-2">Save</button>
                                     </div>
 
                                     <div class="card-footer" style="float: right;">
-                                        <button type="button" class="btn btn-danger">Danger</button>
+                                        <button type="button" class="btn btn-danger">Delete Queue</button>
                                     </div>
 
                                     
