--- a/my_django_app/customer/Templates/Customer/queueOperator.html
+++ b/my_django_app/customer/Templates/Customer/queueOperator.html
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
 	<link rel="stylesheet" href="{%static 'customer/light1.css'%}">
 	<!--end::Layout Themes-->
-
+	
 
 
 </head>
@@ -69,6 +69,20 @@
 						<!--begin::Container-->
 						<div class=" container ">
 							<!--begin::Card-->
+							<div class="form-group row">
+								<label class="col-form-label text-right col-lg-3 col-sm-12">Queue</label>
+								<div class=" col-lg-4 col-md-9 col-sm-12">
+									<select class="form-control " id="kt_select2_1" name="param">
+										<option value="AK">Alaska</option>
+										<option value="HI">Hawaii</option>
+										<option value="CA">California</option>
+										<option value="NV">Nevada</option>
+										<option value="OR">Oregon</option>
+										<option value="WA">Washington</option>
+										<option value="AZ">Arizona</option>
+									</select>
+								</div>
+							</div>
 							<div class="card card-custom gutter-b">
 								<div class="card-body">
 									<!-- <div class="tab-content"> -->
@@ -99,55 +113,22 @@
                                                             <button class="btn btn-danger active" style="width: 7em;">Remove</button>
 														</td>
 													</tr>
-												</tbody>
-											</table>
-											<a href="queueSetup">
-												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
-											</a>
-										<!-- </div> -->
-
-										<!-- <div class="tab-pane fade" id="messages">
-											<table id="example2" class="display" style="width:100%">
-												<thead>
 													<tr>
-														<th>Name2</th>
-														<th>CreatedAt2</th>
-														<th>Active2</th>
-														<th>Queue Settings2</th>
-													</tr>
-												</thead>
-												<tbody>
-													{% for element in data%}
-													<tr>
-														<td>{{element.Name}}</td>
-														<td>{{element.CreatedAt}}</td>
-														<td>{{element.Active}}</td>
+														<td>1</td>
+														<td>2</td>
+														<td>3</td>
 														<td>
-															<a href="/edit/{{element.id}}">
-																<span class="svg-icon svg-icon-primary svg-icon-2x">
-																	<svg
-																		xmlns="http://www.w3.org/2000/svg"
-																		xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
-																		height="24px" viewBox="0 0 24 24" version="1.1">
-																		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																			<rect x="0" y="0" width="24" height="24" />
-																			<path
-																				d="M5,8.6862915 L5,5 L8.6862915,5 L11.5857864,2.10050506 L14.4852814,5 L19,5 L19,9.51471863 L21.4852814,12 L19,14.4852814 L19,19 L14.4852814,19 L11.5857864,21.8994949 L8.6862915,19 L5,19 L5,15.3137085 L1.6862915,12 L5,8.6862915 Z M12,15 C13.6568542,15 15,13.6568542 15,12 C15,10.3431458 13.6568542,9 12,9 C10.3431458,9 9,10.3431458 9,12 C9,13.6568542 10.3431458,15 12,15 Z"
-																				fill="#000000" />
-																		</g>
-																	</svg>
-																</span>
-															</a>
+                                                            <button class="btn btn-primary active" style="width: 7em;">Request</button>
+														</td>
+                                                        <td>
+                                                            <button class="btn btn-success active" style="width: 7em;">Serve</button>
+														</td>
+                                                        <td>
+                                                            <button class="btn btn-danger active" style="width: 7em;">Remove</button>
 														</td>
 													</tr>
-													{% endfor %}
 												</tbody>
 											</table>
-											<a href="queueSetup">
-												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queue operators</button>
-											</a>
-										</div> -->
-									<!-- </div> -->
 								</div>
 							</div>
 							<!--end::Card-->
