--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -211,7 +211,14 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                     <!--begin: Wizard Actions-->
                                     <div class="d-flex justify-content-between border-top mt-5 pt-10">
+                                        
+                                        <!--begin::Aside Bottom-->
+                                        <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
+                                            style=" background-image: url({%static 'customer/pattren_bottom.png' %}); background-size: cover ;" >
+                                        </div>
+                                        <!--end::Aside Bottom-->
                                         <div class="mr-2">
+                
                                             <button type="button"
                                                 class="btn btn-light-primary font-weight-bold text-uppercase px-9 py-4"
                                                 data-wizard-type="action-prev" id="prev">
