--- a/my_django_app/customer/Templates/Customer/signup.html
+++ b/my_django_app/customer/Templates/Customer/signup.html
@@ -20,6 +20,14 @@ License: You must have a valid license purchased only from themeforest(the above
         <title>Sign Up</title>
         <meta name="description" content="Singin page example"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+        <!-- favicon -->
+        <!-- <link rel="shortcut icon" href="{%static 'customer/favicon.ico'%}" type="image/x-icon"> 
+        <link rel="icon" href= "{%static 'customer/favicon.ico'%}" type="image/x-icon">  -->
+        
+        <!-- Trying to add favicon but it's not working "useed the following Website:
+        https://www.favicon-generator.org/" -->
+    
         <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
         <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
         <link rel="stylesheet" href="{%static 'customer/light.css'%}">
@@ -69,7 +77,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="d-flex flex-column-fluid flex-column justify-content-between py-9 px-7 py-lg-13 px-lg-35">
             <!--begin::Logo-->
             <a href="#" class="text-center pt-2">
-                <img src= "{%static 'customer/Q_Green.png'%}" class="max-h-125px" alt=""/>
+                <img src= "{%static 'customer/logo_blue.png'%}" class="max-h-125px" alt=""/>
             </a>
             <!--end::Logo-->
     
@@ -143,7 +151,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
         <!--begin::Aside Bottom-->
         <div class="aside-img-wizard d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center pt-2 pt-lg-5"
-            style="background-position-y: calc(100% + 3rem); background-image: url({%static 'customer/Q_BackG2.png' %})">
+            style="background-position-y: calc(100% + 6rem); background-image: url({%static 'customer/bottom_left1.png' %})">
         </div>
         <!--end::Aside Bottom-->
     </div>
