Added the delete button to the edit page which deletes the queue associated to the opened page

--- a/my_django_app/customer/Templates/Customer/edit.html
+++ b/my_django_app/customer/Templates/Customer/edit.html
@@ -183,11 +183,8 @@
                                             class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3">SignIn</button>
                                     </div> -->
                                     <div class="card-footer" style="float: right;">
-                                        <button type="submit" class="btn btn-primary mr-2">Save</button>
-                                    </div>
-
-                                    <div class="card-footer" style="float: right;">
-                                        <button type="button" class="btn btn-danger">Delete Queue</button>
+                                        <button type="submit" class="btn btn-primary mr-2" name="btnform1">Submit</button>
+                                        <button type="submit" class="btn btn-danger" name="btnform2">Delete</button>
                                     </div>
 
                                     
