--- a/my_django_app/customer/Templates/Customer/queueOperator.html
+++ b/my_django_app/customer/Templates/Customer/queueOperator.html
@@ -23,10 +23,10 @@
 	<link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
 	<link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
 	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
+	<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 	<!--end::Global Theme Styles-->
 
 	<!--begin::Layout Themes(used by all pages)-->
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
 	<link rel="stylesheet" href="{%static 'customer/light1.css'%}">
 	<!--end::Layout Themes-->
-	
+
 
 
 </head>
@@ -50,7 +50,7 @@
 	<!--begin::Header Mobile-->
 	<div id="kt_header_mobile" class="header-mobile align-items-center  header-mobile-fixed ">
 
-	
+
 	</div>
 	<!--end::Header Mobile-->
 	<div class="d-flex flex-column flex-root">
@@ -60,19 +60,22 @@
 			<!--begin::Wrapper-->
 			<!-- <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper"> -->
 
-				<!--begin::Content-->
-				<div class="content  d-flex flex-column flex-column-fluid" id="kt_content">
+			<!--begin::Content-->
+			<div class="content  d-flex flex-column flex-column-fluid" id="kt_content">
 
 
-					<!--begin::Entry-->
-					<div class="d-flex flex-column-fluid">
-						<!--begin::Container-->
-						<div class=" container ">
-							<!--begin::Card-->
-							<div class="form-group row">
-								<label class="col-form-label text-right col-lg-3 col-sm-12">Queue</label>
-								<div class=" col-lg-4 col-md-9 col-sm-12">
-									<select class="form-control " id="kt_select2_1" name="param">
+				<!--begin::Entry-->
+				<div class="d-flex flex-column-fluid">
+					<!--begin::Container-->
+					<div class=" container ">
+						<!--begin::Card-->
+
+						<form action="" method="post">
+						{% csrf_token %}
+						<div class="form-group row">
+							<label class="col-form-label text-right col-lg-3 col-sm-12">Queue</label>
+							<div class=" col-lg-4 col-md-9 col-sm-12">
+									<!-- <select class="form-control " id="kt_select2_1" name="param" id="exampleSelect2">
 										<option value="AK">Alaska</option>
 										<option value="HI">Hawaii</option>
 										<option value="CA">California</option>
@@ -80,64 +83,91 @@
 										<option value="OR">Oregon</option>
 										<option value="WA">Washington</option>
 										<option value="AZ">Arizona</option>
-									</select>
+									</select> -->
+									{{form.Queue_list}}
+									<button class="btn btn-success active" style="width: 10em;">Choose queue</button>
 								</div>
 							</div>
-							<div class="card card-custom gutter-b">
-								<div class="card-body">
-									<!-- <div class="tab-content"> -->
-										<!-- <div class="tab-pane fade" id="profile"> -->
-											<table id="example1" class="display" style="width:100%">
-												<thead>
-                                                    <tr>
-                                                        <th>Number</th>
-														<th>Name</th>
-														<th>Category</th>
-														<th>Request</th>
-														<th>Served</th>
-														<th>Removed</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>1</td>
-														<td>2</td>
-														<td>3</td>
-														<td>
-                                                            <button class="btn btn-primary active" style="width: 7em;">Request</button>
-														</td>
-                                                        <td>
-                                                            <button class="btn btn-success active" style="width: 7em;">Serve</button>
-														</td>
-                                                        <td>
-                                                            <button class="btn btn-danger active" style="width: 7em;">Remove</button>
-														</td>
-													</tr>
-													<tr>
-														<td>1</td>
-														<td>2</td>
-														<td>3</td>
-														<td>
-                                                            <button class="btn btn-primary active" style="width: 7em;">Request</button>
-														</td>
-                                                        <td>
-                                                            <button class="btn btn-success active" style="width: 7em;">Serve</button>
-														</td>
-                                                        <td>
-                                                            <button class="btn btn-danger active" style="width: 7em;">Remove</button>
-														</td>
-													</tr>
-												</tbody>
-											</table>
-								</div>
+						</form>
+
+						<!-- <div class="form-group">
+							<label for="exampleSelect2">Categories </label>
+							{% comment %} <select multiple="" class="form-control" id="exampleSelect2" name="category_option">
+								<option>Choose a category</option>
+								{% for category in categories %}
+									<option> {{category.Name}} </option>
+								{% endfor %}
+							</select> {% endcomment %}
+							{{ form.categories_list }}
+						</div> -->
+
+
+
+
+
+
+
+						<div class="card card-custom gutter-b">
+							<div class="card-body">
+								<!-- <div class="tab-content"> -->
+								<!-- <div class="tab-pane fade" id="profile"> -->
+								<table id="example1" class="display" style="width:100%">
+									<thead>
+										<tr>
+											<th>Number</th>
+											<th>Name</th>
+											<th>Category</th>
+											<th>Request</th>
+											<th>Served</th>
+											<th>Removed</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>1</td>
+											<td>2</td>
+											<td>3</td>
+											<td>
+												<button class="btn btn-primary active"
+													style="width: 7em;">Request</button>
+											</td>
+											<td>
+												<button class="btn btn-success active"
+													style="width: 7em;">Serve</button>
+											</td>
+											<td>
+												<button class="btn btn-danger active"
+													style="width: 7em;">Remove</button>
+											</td>
+										</tr>
+										<tr>
+											<td>1</td>
+											<td>2</td>
+											<td>3</td>
+											<td>
+												<button class="btn btn-primary active"
+													style="width: 7em;">Request</button>
+											</td>
+											<td>
+												<button class="btn btn-success active"
+													style="width: 7em;">Serve</button>
+											</td>
+											<td>
+												<button class="btn btn-danger active"
+													style="width: 7em;">Remove</button>
+											</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
-							<!--end::Card-->
 						</div>
-						<!--end::Container-->
+						<!--end::Card-->
 					</div>
-					<!--end::Entry-->
+					<!--end::Container-->
 				</div>
-				<!--end::Content-->
+				<!--end::Entry-->
+			</div>
+			<!--end::Content-->
 			<!-- </div> -->
 			<!--end::Wrapper-->
 		</div>
@@ -227,8 +257,8 @@
 	<!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 	<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 	<script>
-			$(document).ready(function(){ 
-		$("#myTab li:eq(0) a").tab('show'); // show 2nd tab on page load
+		$(document).ready(function () {
+			$("#myTab li:eq(0) a").tab('show'); // show 2nd tab on page load
 		});
 	</script>
 	<script>
@@ -237,7 +267,7 @@
 
 		});
 
-        $(document).ready(function () {
+		$(document).ready(function () {
 			$('#example2').DataTable();
 
 		});
@@ -247,4 +277,5 @@
 	<!--end::Page Scripts-->
 </body>
 <!--end::Body-->
+
 </html>
